# SIX-CTF-X-HACK2G2

./: .gitignore  README.md  TODO.md
Achetez_moi_un_cafe/: README.md  SOLVE.md
Arcaninclusion/: SOLVE.md  robots.txt  stylesheet.css
Arcaninclusion/pics/: index.php
Crypto/Ave,Cesar!/: README.md  SOLVE.md  flag.enc
Crypto/Basics/: README.md  SOLVE.md  flag.enc
Crypto/Brute/: Brute.yml  README.md  SOLVE.md  challenge.yml  passwd  shadow
Crypto/Exorciste/: Exorciste.yml  README.md  SOLVE.md  challenge.yml  flag.enc
Crypto/Santa1/: README.md  SOLVE.html  SOLVE.md  hash.txt
Crypto/Santa2/: README.md  SOLVE.md  chall.txt
Find_the_name/: README.md  SOLVE.md
Forensic/HelpMe/: README.md  bot.py  helpme.yml  logs.txt
Forensic/SantaSniffCoke/: README.md  SantaSniffCoke.yml  capture.pcapng  challenge.yml
Forensic/TheFileIsDeleted/: README.md  SOLVE.md  TheFileIsDeleted.yml  challenge.yml
Forensic/Who_s_that_Pokemon/: Who_s_that_Pokemon.yml
Inception/: README.md  SOLVE.md
Misc/AgarBot.ovh/: Alert.js  Player.js  (+9 more)
Scanner/: README.md  SOLVE.md
Web/r_place_1/: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  SOLVE.md  challenge.yml  docker-compose.yml  r_place_1.yml
Web/r_place_1/.ctf/: config
Web/r_place_1/public/: newinstance.html  place.html
Web/r_place_1/public/css/: style.css
Web/r_place_1/public/js/: app.js  bundle.js  pixelInfo.js  toolbar.js
Web/r_place_1/src/: main.rs  websocket.rs
Web/r_place_1/src/models/: appstate.rs  mod.rs  utils.rs
Web/r_place_1/src/routes/: mod.rs  place.rs  utils.rs
Who_s_that_Pokemon/: README.md  SOLVE.md
(+432 files in other folders)
