[package]
name = "r-place-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
chrono = "0.4.26"
dotenv = "0.15.0"
flate2 = "1.0.27"
image = "0.24.7"
lettre = "0.11.1"
rand = "0.8.5"
regex = "1.9.3"
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.105"
thiserror = "1.0.47"
